important update to index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="inner">
     <img src="image/cod.png" class="game-logo" alt="COD Mobile">
     <h3>Call of Duty Mobile</h3>
-    <button class="btn" onclick="event.stopPropagation(); location.href='cod.html'">Join Tournament</button>
+    <button class="btn" onclick="event.stopPropagation();/* location.href='cod.html'"*\>Join Tournament</button>
   </div>
 </div>
 
