important: commit message is required

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
       <h2>🔥 Featured Tournaments</h2>
       <div class="tournament-list">
 
-        <div class="t-card upgraded" data-amount="2000" onclick="location.href='cod.html'" style="cursor:pointer;">
+        <div class="t-card upgraded" data-amount="2000"  style="cursor:pointer;">
   <div class="shine"></div>
   <div class="inner">
     <img src="image/cod.png" class="game-logo" alt="COD Mobile">
     <h3>Call of Duty Mobile</h3>
-    <button class="btn" onclick="event.stopPropagation();/* location.href='cod.html'"*\>Join Tournament</button>
+    <button class="btn" onclick="event.stopPropagation();// location.href='cod.html'">Coming Soon</button>
   </div>
 </div>
 
