important: commit message will be used in cas

--- a/pubg.html
+++ b/pubg.html
@@ -11,35 +11,38 @@
 <header>PUBG — Tournaments</header>
 
 <section id="tournaments">
-    <div class="tournament-card" data-id="livik">
+    <div class="tournament-card" data-id="erangel">
         <div class="tournament-header">
-            <h3>Livik</h3>
+            <h3>Erangel(5 Matches)</h3>
         </div>
         <div class="tournament-info">     
-            Entry Fee: ₦1,500 <br>
-            prize pool:₦50k+ 
+            Entry Fee: ₦5000 <br>
+            prize pool:₦350k per match <br>
+            Duo  
         </div>
         <button class="join-btn" >coming-soon</button>
     </div>
 
     <div class="tournament-card" data-id="erangel">
         <div class="tournament-header">
-            <h3>Erangel</h3>
+            <h3>Erangel(5 Matches)</h3>
         </div>
         <div class="tournament-info">
-            Entry Fee: ₦500 <br>
-            prize pool:₦30k+ 
+            Entry Fee: ₦1000 <br>
+            prize pool:₦70k per match<br>
+            Duo 
         </div>
         <button class="join-btn" onclick="joinWhatsApp('Erangel')">Join Tournament</button>
     </div>
 
-    <div class="tournament-card" data-id="tdm">
+    <div class="tournament-card" data-id="coming-soon">
         <div class="tournament-header">
-            <h3>TDM</h3>
+            <h3>Erangel(3 Matches)</h3>
         </div>
         <div class="tournament-info">
-            Entry Fee: ₦2,000 <br>
-            prize pool:₦? <br>
+            Entry Fee: ₦10,000 <br>
+            prize pool:₦700k per match <br>
+            Squad <br>
             Coming soon
         </div>
         
@@ -50,8 +53,9 @@
             <h3>Grand Tournament</h3>
         </div>
         <div class="tournament-info">
-            Entry Fee: ₦10,000 <br>
-            prize pool:₦600k+ <br>
+            Entry Fee: ₦20,000 <br>
+            prize pool:₦1.4m per match <br>
+            Squad <br>
             Coming soon
         </div>
     </div>
