important: commit message will be used in case of a commit failure.

--- a/pubg.html
+++ b/pubg.html
@@ -16,7 +16,7 @@
             <h3>Erangel(5 Matches)</h3>
         </div>
         <div class="tournament-info">     
-            Entry Fee: ₦5000 <br>
+            Entry Fee: ₦5000 per match<br>
             prize pool:₦350k per match <br>
             Duo  
         </div>
@@ -28,7 +28,7 @@
             <h3>Erangel(5 Matches)</h3>
         </div>
         <div class="tournament-info">
-            Entry Fee: ₦1000 <br>
+            Entry Fee: ₦1000 per match <br>
             prize pool:₦70k per match<br>
             Duo 
         </div>
@@ -40,7 +40,7 @@
             <h3>Erangel(3 Matches)</h3>
         </div>
         <div class="tournament-info">
-            Entry Fee: ₦10,000 <br>
+            Entry Fee: ₦10,000 per match <br>
             prize pool:₦700k per match <br>
             Squad 
            
@@ -53,7 +53,7 @@
             <h3>Grand Tournament</h3>
         </div>
         <div class="tournament-info">
-            Entry Fee: ₦20,000 <br>
+            Entry Fee: ₦20,000 per match <br>
             prize pool:₦1.4m per match <br>
             Squad 
           
